objects/Resource_Type__c/Resource_Type__c.object-meta.xml
<CustomObject>
    <label>Resource Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>