objects/Resource_Type__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Per Diem</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
            <value>
                <fullName>Bundled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>