objects/Resource_Type__c/fields/Charge_Rinse_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charge_Rinse_Out_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Rinse Out Fee</label>
    <type>Checkbox</type>
</CustomField>