objects/Resource_Type__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <length>18</length>
    <type>Text</type>
</CustomField>