objects/Resource_Type__c/fields/EEC_Surcharge_Exempted__c.field-meta.xml
<CustomField>
    <fullName>EEC_Surcharge_Exempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EEC Surcharge Exempted</label>
    <type>Checkbox</type>
</CustomField>