objects/Resource_Type__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field is used to prevent users from selecting a resource type if the date selected is prior the current date.  Otherwise it will allow billing to be completed for existing sales lines, TM lines, and billing worksheets.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>