objects/Resource_Type__c/fields/EQAI_Supply__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Supply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EQAI Supply</label>
    <type>Checkbox</type>
</CustomField>