objects/Resource_Type__c/fields/Equipment_Group__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Group</label>
    <referenceTo>Equipment_Group__c</referenceTo>
    <relationshipLabel>Resource Types</relationshipLabel>
    <relationshipName>Resource_Types</relationshipName>
    <type>Lookup</type>
</CustomField>