objects/Resource_Type__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>This field will store the production CSID for the record.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>