objects/Resource_Type__c/fields/External_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_Name__c</fullName>
    <externalId>true</externalId>
    <label>External Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>