objects/Resource_Type__c/fields/Formual__c.field-meta.xml
<CustomField>
    <fullName>Formual__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSID</label>
    <type>Text</type>
</CustomField>