objects/Resource_Type__c/fields/Fuel_Fired_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Fired_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Fired Equipment</label>
    <type>Checkbox</type>
</CustomField>