objects/Resource_Type__c/fields/Gold_ER_Rate3__c.field-meta.xml
<CustomField>
    <fullName>Gold_ER_Rate3__c</fullName>
    <label>Gold ER Rate3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>