objects/Resource_Type__c/fields/Gold_ER_Rate__c.field-meta.xml
<CustomField>
    <fullName>Gold_ER_Rate__c</fullName>
    <label>Gold ER Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>