objects/Resource_Type__c/fields/Gold_Rate2__c.field-meta.xml
<CustomField>
    <fullName>Gold_Rate2__c</fullName>
    <label>Gold Rate2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>