objects/Resource_Type__c/fields/Inter_co_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inter_co_Cost__c</fullName>
    <description>Depreciated</description>
    <inlineHelpText>Depreciated</inlineHelpText>
    <label>Inter-co Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>