objects/Resource_Type__c/fields/LEM_Item__c.field-meta.xml
<CustomField>
    <fullName>LEM_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LEM Item</label>
    <type>Checkbox</type>
</CustomField>