objects/Resource_Type__c/fields/Platinum_ER_Rate3__c.field-meta.xml
<CustomField>
    <fullName>Platinum_ER_Rate3__c</fullName>
    <label>Platinum ER Rate3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>