objects/Resource_Type__c/fields/Platinum_Rate1__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Rate1__c</fullName>
    <label>Platinum Rate1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>