objects/Resource_Type__c/fields/Platinum_Rate2__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Rate2__c</fullName>
    <label>Platinum Rate2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>