objects/Resource_Type__c/fields/Platinum_Rate4__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Rate4__c</fullName>
    <label>Platinum Rate4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>