objects/Resource_Type__c/fields/Rate_Sheet_Category__c.field-meta.xml
<CustomField>
    <fullName>Rate_Sheet_Category__c</fullName>
    <label>Rate Sheet Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After Cooler</fullName>
            </value>
            <value>
                <fullName>Berm</fullName>
            </value>
            <value>
                <fullName>Blaster</fullName>
            </value>
            <value>
                <fullName>Blaster Accessories</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Bobcat</fullName>
            </value>
            <value>
                <fullName>Bobcat/Skid Steer</fullName>
            </value>
            <value>
                <fullName>Bobcat/Skid Steer Attachment</fullName>
            </value>
            <value>
                <fullName>Compressor</fullName>
            </value>
            <value>
                <fullName>Containment Boom</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>CSE Safety</fullName>
            </value>
            <value>
                <fullName>Cusco/Guzzler</fullName>
            </value>
            <value>
                <fullName>Dewatering Box</fullName>
            </value>
            <value>
                <fullName>Dozer</fullName>
            </value>
            <value>
                <fullName>Draeger Equipment</fullName>
            </value>
            <value>
                <fullName>Drum Accessories</fullName>
            </value>
            <value>
                <fullName>Drum Loader</fullName>
            </value>
            <value>
                <fullName>Dry Ice Blaster</fullName>
            </value>
            <value>
                <fullName>Dump Truck</fullName>
            </value>
            <value>
                <fullName>Dust Mask</fullName>
            </value>
            <value>
                <fullName>Electric Tools</fullName>
            </value>
            <value>
                <fullName>Excavator</fullName>
            </value>
            <value>
                <fullName>Excavator Attachment</fullName>
            </value>
            <value>
                <fullName>Field Sampling Equipment</fullName>
            </value>
            <value>
                <fullName>Field Testing Equipment</fullName>
            </value>
            <value>
                <fullName>Filtration System</fullName>
            </value>
            <value>
                <fullName>Fork Lift</fullName>
            </value>
            <value>
                <fullName>Forklift Attachment</fullName>
            </value>
            <value>
                <fullName>Frac Tank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>