objects/Resource_Type__c/fields/Rental_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Rental_Resource_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Resource Type</label>
    <type>Checkbox</type>
</CustomField>