objects/Resource_Type__c/fields/Resource_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Resource_Class_Code__c</fullName>
    <description>Show the Resource Class Code from EQAI</description>
    <label>Resource Class Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>