objects/Resource_Type__c/fields/Resource_Group__c.field-meta.xml
<CustomField>
    <fullName>Resource_Group__c</fullName>
    <label>Resource Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absorbent Materials</fullName>
            </value>
            <value>
                <fullName>Degreasers &amp; Neutralizing Agents</fullName>
            </value>
            <value>
                <fullName>DOT Shipping Containers</fullName>
            </value>
            <value>
                <fullName>Field Analytical</fullName>
            </value>
            <value>
                <fullName>Field Personnel</fullName>
            </value>
            <value>
                <fullName>Hand Tool/Construction Accessories</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Heavy Duty Trucks</fullName>
            </value>
            <value>
                <fullName>Hoses/Pipe</fullName>
            </value>
            <value>
                <fullName>Light Duty Truck/Response Equipment</fullName>
            </value>
            <value>
                <fullName>Marine Equipment</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Per Diem</fullName>
            </value>
            <value>
                <fullName>Power Tools</fullName>
            </value>
            <value>
                <fullName>Pressure Washing Equipment</fullName>
            </value>
            <value>
                <fullName>Pumping</fullName>
            </value>
            <value>
                <fullName>Sampling And Lab Supplies</fullName>
            </value>
            <value>
                <fullName>Site Support</fullName>
            </value>
            <value>
                <fullName>Specialty Equipment</fullName>
            </value>
            <value>
                <fullName>Yellow Iron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>