objects/Resource_Type__c/fields/Silver_Rate4__c.field-meta.xml
<CustomField>
    <fullName>Silver_Rate4__c</fullName>
    <label>Silver Rate4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>