objects/Resource_Type__c/fields/Unit_Cost3__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost3__c</fullName>
    <label>Unit Cost3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>