objects/Resource_Type__c/fields/Unit_Cost4__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost4__c</fullName>
    <label>Unit Cost4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>