objects/Resource_Type__c/fields/Unit_of_Measure2__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure2</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Resource Types (Unit of Measure2)</relationshipLabel>
    <relationshipName>Resource_Types2</relationshipName>
    <type>Lookup</type>
</CustomField>