objects/Resource_Type__c/validationRules/Cannot_Change_Resource_Type_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Resource_Type_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Name ),$Profile.Name != 'System Administrator')</errorConditionFormula>
    <errorMessage>You do not have sufficient privileges to change Resource Type Name.</errorMessage>
</ValidationRule>