objects/Resource_Type__c/listViews/Bundled.listView-meta.xml
<ListView>
    <fullName>Bundled</fullName>
    <columns>Formual__c</columns>
    <columns>NAME</columns>
    <columns>Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Bundled</value>
    </filters>
    <label>Bundled</label>
</ListView>