objects/Resource_Type__c/listViews/Equipment.listView-meta.xml
<ListView>
    <fullName>Equipment</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>Fleet_No_Required__c</columns>
    <columns>Fuel_Fired_Equipment__c</columns>
    <columns>Charge_Rinse_Out_Fee__c</columns>
    <columns>External_Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Equipment</value>
    </filters>
    <label>Equipment</label>
</ListView>