objects/Resource_Type__c/listViews/Labor.listView-meta.xml
<ListView>
    <fullName>Labor</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Gold_ER_Rate__c</columns>
    <columns>Gold_Rate__c</columns>
    <columns>Platinum_ER_Rate__c</columns>
    <columns>Platinum_Rate__c</columns>
    <columns>Formual__c</columns>
    <columns>Blocked__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </filters>
    <label>Labor</label>
</ListView>