objects/Resource_Type__c/listViews/Lump_Sum.listView-meta.xml
<ListView>
    <fullName>Lump_Sum</fullName>
    <columns>Formual__c</columns>
    <columns>NAME</columns>
    <columns>Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Lump Sum</value>
    </filters>
    <label>Lump Sum</label>
</ListView>